unpackaged/main/default/objects/BillingPlan__c/BillingPlan__c.object-meta.xml
<CustomObject>
    <description>Use to define a billing plan on quote</description>
    <label>Billing Plan</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Billing Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>