unpackaged/main/default/objects/BillingPlan__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Billing Plans</relationshipLabel>
    <relationshipName>Billing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>