unpackaged/main/default/objects/BillingPlan__c/fields/QuoteTotal__c.field-meta.xml
<CustomField>
    <fullName>QuoteTotal__c</fullName>
    <formula>Quote__r.QuoteTotalXRPProducts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total (XRP products)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>