unpackaged/main/default/objects/BillingPlan__c/fields/SumTransaction__c.field-meta.xml
<CustomField>
    <fullName>SumTransaction__c</fullName>
    <label>Sum Transaction (%)</label>
    <summarizedField>BillingTransaction__c.Percentage__c</summarizedField>
    <summaryForeignKey>BillingTransaction__c.BillingPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>