unpackaged/main/default/objects/BillingPlan__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>Transactions</label>
    <summaryForeignKey>BillingTransaction__c.BillingPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>