unpackaged/main/default/objects/BillingPlan__c/validationRules/VR_BillingPlan_NoModificationAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_BillingPlan_NoModificationAllowed</fullName>
    <active>true</active>
    <description>VR to not allow any modification on the Billing Plan after Check Quote</description>
    <errorConditionFormula>AND(
$User.BypassVR__c = FALSE,
OR(
 Quote__r.RecordType.DeveloperName = 'After_Checks',
 ISPICKVAL(Quote__r.SBQQ__Status__c, 'Presented')
),
OR(
SumTransaction__c &lt;&gt; 100, 
ISCHANGED(Transactions__c)
)
)</errorConditionFormula>
    <errorMessage>After quote has been checked, you can't edit the Billing Plan.</errorMessage>
</ValidationRule>